# mo_cloud

./: alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2022_04_21_0258_.py  2022_04_22_0155_.py
server/src/: app.py  config.py
server/src/dependencies/: __init__.py  repository.py
server/src/dependencies/repository/: __init__.py  task.py  user.py
server/src/models/: __init__.py  base.py  permission.py  role.py  role_permission.py  service.py  task.py  user.py  user_task.py
server/src/routes/: service.py  task.py  user.py
server/src/schemas/: __init__.py  service.py  user.py
server/src/shared/: types.py
server/test/: test_repository.py
